# ti4_planet_selection

./: .gitignore  LICENSE  README.md  _allocations.py  _ti4_get_formatter.py  _ti4_load_configs.py  _ti4_load_formatters.py  _ti4_load_planets.py  _ti4_planet_selection.py  _tiles.py  compile_to_js.py  index.html  requirements.txt  ti4.css  ti4_planet_selection.py
__target__/: _ti4_planet_selection.js  _ti4_planet_selection.map  _ti4_planet_selection.project  _ti4_planet_selection.py  math.js  org.transcrypt.__runtime__.js  random.js  ti4_planet_selection.js  ti4_planet_selection.map  ti4_planet_selection.project  ti4_planet_selection.py
cpp/: .clang-format  CMakeLists.txt  TileInfo.cpp  _ti4_load_planets.py  bootstrap.sh  config.cpp  config.hpp  deck_generator.cpp  deck_generator.hpp  main.cpp  num_players.cpp  num_players.hpp  python_main.cpp  style.cpp  style.hpp  tile_info.cpp  tile_info.hpp  tile_info_vector.cpp  tile_info_vector.hpp
cpp/ti4_planet_selection_lib/: CMakeLists.txt  config.hpp  deck_generator.cpp  deck_generator.hpp  internal_error.hpp  num_players.cpp  num_players.hpp  style.cpp  style.hpp  tile_info_vector.cpp  validation_error.hpp
